# global-trade-intelligence-pipeline

./: .bruin.yml  .dockerignore  .env  .env.example  .gitignore  .user.yml  ARCHITECTURE.md  CODEX_HANDOVER_PROMPT.md  DASHBOARD_FIELD_MAP.md  DASHBOARD_STATUS.md  INFRA_INVENTORY.md  Makefile  NEXT_STEPS.md  PROJECT_STATE.md  README.md  Run_Instruction.MD  bruin_runtime.py  check_hub_integrity.py  dbt_project.yml  deploy_option_a_git_pull.sh  profiles.yml  pyproject.toml  requirements-streamlit.txt  requirements.txt
Documentation/: Trade Disruption Event Analysis(Gemini).xlsx  Weekly Oil Bulletin Weekly prices without taxes - 2024-02-19.xlsx  comtrade_field_guide_2022.docx  disruption_events_strategy.docx
app/: streamlit_app.py
docker/: docker-compose.yml
docs/: OPERATIONS_RUNBOOK.md  agent-worklog.md  bruin-refactor-plan.md  chokepoint-canonicalization-worklog.md  hybrid-vm-serverless-rollout-plan.md
macros/: dashboard_formatting.sql  fx_transform.sql  rolling_corr.sql  shared_utils.sql  sql_compat.sql
ops/: batch_plan.json  cat > deploy_option_a_git_pull.sh  execution_profiles.json
scripts/: bootstrap_local.sh  container_entrypoint.sh  google_auth_env.sh  render_pipeline_env_from_secret_manager.sh  run_dbt.sh  run_pipeline.sh  run_serverless_batch.sh  sync_env_secrets_to_secret_manager.sh  vm_api_insert.sh  vm_bootstrap.sh  vm_fasttrack_bruin_bootstrap.sh  vm_repo_copy.sh  vm_repo_sync.sh  vm_runtime_ctl.sh
seeds/: dim_country_bloc_membership_seed.csv  schema.yml
tests/: dim_chokepoint_null_coordinates.sql  dim_country_bloc_membership_unique_grain.sql  (+109 more)
(+442 files in other folders)
